examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/variant_fields_order.st
language core;

extend with #variants, #unit-type;
fn foo(succeed : Bool) -> <|failure : Nat, value : Nat|> {
  	return <| value = 0 |>
}

fn main(succeed : Nat) -> <|value : Nat, failure : Nat|> {
  return foo(true)
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
